<resources>
    <string name="app_name">Calendar Cloud</string>-

    <!-- MAIN ACTIVITY -->
    <string name="btn_login">Login</string>
    <string name="btn_registro">Registro</string>

    <!-- REGISTRO -->
    <string name="crearCuentaTXT">Crear Una Cuenta</string>
    <string name="nombreEt">Nombre y Apellido</string>
    <string name="CorreoEt">Correo Electrónico</string>
    <string name="ContraseñaEt">Contraseña</string>
    <string name="ConfirmarContraseñaEt">Confirmar Contraseña</string>
    <string name="RegistrarUsuario">Registrar</string>
    <string name="tengoCuentaTXT">Tengo una cuenta</string>

    <!-- ACTIVIDAD LOGIN-->
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="correoLogin">Correo</string>
    <string name="passLogin">Contraseña</string>
    <string name="btn_logueo">Ingresar</string>
    <string name="usuarioNuevoTXT">¿No tienes una cuenta?. ¡Registrate!</string>

    <!-- MENÚ PRINICIPAL-->
    <string name="bienvenidoPrincipal">Bienvenido(a)</string>
    <string name="uidPrincipal"> -- </string>
    <string name="nombrePrincipal"> -- </string>
    <string name="correoPrincipal"> -- </string>

    <string name="agregarNotas">Agregar</string>
    <string name="listaNotas">Mis Notas</string>
    <string name="archivados">Archivados</string>
    <string name="perfil">Perfil</string>
    <string name="acercaDe">Acerca De</string>
    <string name="cerrarSesion">Cerrar Sesión</string>

    <!-- AGREGAR NOTA -->
    <string name="uid_usuario">Uid del Usuario</string>
    <string name="correo_usuario">Correo de Usuario</string>
    <string name="fecha_hora_actual">Fecha y Hora Actual</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripción</string>
    <string name="btn_calendario">Calendario</string>
    <string name="fecha"> 00/00/0000 </string>
    <string name="estado"> No finalizado</string>

    <!-- MENÚ -->
    <string name="agregar_nota_BD">Agregar</string>
    <string name="actualizar_nota_BD">Actualizar</string>

    <!-- ITEM NOTA -->
    <string name="id_nota_item">ID Nota</string>
    <string name="uid_usuario_item">Uid del Usuario</string>
    <string name="correo_usuario_item">Correo de Usuario</string>
    <string name="fecha_hora_registro">Fecha y Hora Registro</string>
    <string name="titulo_item">Titulo</string>
    <string name="descripcion_item">Descripción</string>
    <string name="fecha_item"> 00/00/0000 </string>
    <string name="estado_item"> No finalizado</string>

    <!-- CUADRO DE DIALOGO OPCIONES -->
    <string name="elijaOpcionTXT">Elija una opción</string>
    <string name="CD_Eliminar">Eliminar</string>
    <string name="CD_Actualizar">Actualizar</string>

    <!-- ACTUALIZAR NOTA -->
    <string name="id_nota_A">ID Nota</string>
    <string name="uid_usuario_A">Uid del Usuario</string>
    <string name="correo_usuario_A">Correo de Usuario</string>
    <string name="fecha_registro_A">Fecha de Registro</string>
    <string name="titulo_A">Titulo</string>
    <string name="descripcion_A">Descripción</string>
    <string name="btn_calendario_A">Calendario</string>
    <string name="fecha_A"> 00/00/0000 </string>
    <string name="estado_A"> No finalizado</string>
    <string name="estado_nuevo"> -- </string>

    <!-- SPINNER - ESTADO -->
    <string-array name="estados_notas">
        <item>"No Finalizado"</item>
        <item>"Finalizado"</item>
    </string-array>

    <!-- GOOGE -->
    <string name="default_web_client_id">AIzaSyCfZNwR2xmx3Vyggnwntr42YZJq9w9sYaA</string>

</resources>