<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".agregarNotas.agregar_nota">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- UID DEL USUARIO -->
        <TextView
            android:id="@+id/uid_usuario"
            android:hint="@string/uid_usuario"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:fontFamily="@font/andika"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- CORREO DEL USUARIO -->
        <TextView
            android:id="@+id/correo_usuario"
            android:hint="@string/correo_usuario"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:fontFamily="@font/andika"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- FECHA Y HORA ACTUAL -->
        <TextView
            android:id="@+id/fecha_hora_actual"
            android:hint="@string/fecha_hora_actual"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:fontFamily="@font/andika"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- TITULO -->
        <EditText
            android:id="@+id/titulo"
            android:hint="@string/titulo"
            android:textColorHint="@color/black"
            android:textColor="@color/colorGrayBlue"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/andika"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- DESCRIPCIÓN -->
        <EditText
            android:id="@+id/descripcion"
            android:hint="@string/descripcion"
            android:textColorHint="@color/black"
            android:textColor="@color/colorGrayBlue"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:minHeight="150dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!-- BOTÓN PARA ABRIR CALENDARIO -->
            <Button
                android:id="@+id/btn_calendario"
                android:text="@string/btn_calendario"
                app:icon="@drawable/icono_calendario"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!-- VISUALIZAR FECHA ELEGIDA -->
            <TextView
                android:id="@+id/fecha"
                android:hint="@string/fecha"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:textColor="@color/colorGrayBlue"
                android:fontFamily="@font/andika"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- ESTADO DE LA NOTA -->
        <TextView
            android:id="@+id/estado"
            android:hint="@string/estado"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textColor="#DC1204"
            android:fontFamily="@font/andika"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>