<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/white"
    android:layout_gravity="center">

    <TextView
        android:text="@string/elijaOpcionTXT"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/cherry_swash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_fileName="seleccionar.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="true" />
    
    <Button
        android:id="@+id/CD_Eliminar"
        android:text="@string/CD_Eliminar"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/andika"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/CD_Actualizar"
        android:text="@string/CD_Actualizar"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/andika"
        android:textColor="@color/black"
        android:backgroundTint="@color/gold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</androidx.appcompat.widget.LinearLayoutCompat>