<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Registro">
    
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/crearCuentaTXT"
            android:fontFamily="@font/cherry_swash"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="registro.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp" />
        
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/nombreEt"
                android:inputType="textPersonName|textCapWords"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/andika"
                android:drawableStart="@drawable/icono_nombres"
                android:hint="@string/nombreEt"
                android:textColor="@color/colorGrayBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/CorreoEt"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/andika"
                android:textColor="@color/colorGrayBlue"
                android:drawableStart="@drawable/icono_correo"
                android:hint="@string/CorreoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#1B262C"
            app:hintEnabled="true">

            <EditText
                android:id="@+id/ContraseñaEt"
                android:inputType="textPassword"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/andika"
                android:textColor="@color/colorGrayBlue"
                android:drawableStart="@drawable/icono_password"
                android:hint="@string/ContraseñaEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#1B262C"
            app:hintEnabled="true">

            <EditText
                android:id="@+id/ConfirmarContraseñaEt"
                android:inputType="textPassword"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/andika"
                android:textColor="@color/colorGrayBlue"
                android:drawableStart="@drawable/icono_password"
                android:hint="@string/ConfirmarContraseñaEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
        
        <Button
            android:id="@+id/RegistrarUsuario"
            android:text="@string/RegistrarUsuario"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/andika"
            android:backgroundTint="@color/orange"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        
        <TextView
            android:id="@+id/tengoCuentaTXT"
            android:text="@string/tengoCuentaTXT"
            android:fontFamily="@font/andika"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>