<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Login">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="vertical">
        
        <TextView
            android:text="@string/iniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/cherry_swash"
            android:textSize="25sp"
            android:gravity="center" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="login.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp" />
        
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/correoLogin"
                android:hint="@string/correoLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/andika"
                android:textColor="@color/colorGrayBlue"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/icono_correo"
                android:drawablePadding="10dp"
                android:padding="20dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#1B262C"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/passLogin"
                android:hint="@string/passLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/andika"
                android:textColor="@color/colorGrayBlue"
                android:inputType="textPassword"
                android:drawableStart="@drawable/icono_password"
                android:drawablePadding="10dp"
                android:padding="20dp" />

        </com.google.android.material.textfield.TextInputLayout>
        
        <Button
            android:id="@+id/btn_logueo"
            android:text="@string/btn_logueo"
            android:fontFamily="@font/andika"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/usuarioNuevoTXT"
            android:text="@string/usuarioNuevoTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_marginTop="20dp" />

        
    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>