<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">

        <!-- Animación -->
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="calendar.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true" />
        
        <TextView
            android:text="@string/app_name"
            android:textSize="30sp"
            android:fontFamily="@font/cherry_swash"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimary"

            android:textColor="@color/white"
            android:fontFamily="@font/andika"
            android:text="@string/btn_login" />

        <Button
            android:id="@+id/btn_registro"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:fontFamily="@font/andika"
            android:backgroundTint="@color/orange"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/btn_registro" />


    </androidx.appcompat.widget.LinearLayoutCompat>



</RelativeLayout>